--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
     <head>
-        <title>L-N-A-B</title>
+        <title>Canastahudik</title>
         <meta charset="utf-8">
         <link href="css/main.css" rel="stylesheet" type="text/css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,16 +14,16 @@
     			<div class="header-top">
                     <div class="header-top-inner">
                         <p>Fax: 0650-344723</p>
-                        <p>Mailadress: svararsporadiskt@lnab.work</p>
+                        <p>Mailadress: svararsporadiskt@canastahudik.se</p>
                     </div>
     			</div>
     			<div class="header-bottom">
-    				<a href="index.html">-L-N-A-B-</a>
+    				<a href="index.html">Canastahudik</a>
     			</div>
                 <div class="menubar">
                     <div class="menubar-inner">
-                        <a href="referenser.html">Refenser</a>
-                        <a href="contact.html">Kontakt</a>
+                        <a href="referenser.html">Regler</a>
+                        <a href="contact.html">Ställning</a>
                         <a href="https://groggbloggen.se/" target="_blank">Groggrecept</a>
                         <a href="https://www.1177.se/" target="_blank">1177</a>
                     </div>
@@ -32,14 +32,9 @@
 
     		<div class="content">
     			<div class="content-top">
-    				<h1>Välkommen till LNAB!</h1>
+    				<h1>Välkommen till Canastahudik!</h1>
                     <hr>
-                    <h3>Inget jobb för stort eller för litet, vissa tar bara väldigt mycket längre tid än andra.</h3>
-                    <hr>
-                    <h4>LNAB har de senaste åren kommit att bli ett namn det talas om i vissa utvalda kretsar och vi lovar att fortsätta 
-                    leverera på samma nivå även kommande år.</h4>
-                    <h4>Kundundersökningar, recensioner eller andra värdemätare är inget som ni hittar hos
-                    oss. Vi satsar istället på att vara det företag vi alltid varit. Med liknande leveranstid och liknande kvalité.</h4>
+                    <h3>Varför inte förgylla en vardag med lite Canasta?</h3>
                     <img src="images/crossed-hammers.png">
     			</div>
     		</div>
