--- a/index.html
+++ b/index.html
@@ -12,20 +12,14 @@
     	<div class="page">
     		<div class="header">
     			<div class="header-top">
-                    <div class="header-top-inner">
-                        <p>Fax: 0650-344723</p>
-                        <p>Mailadress: svararsporadiskt@canastahudik.se</p>
-                    </div>
-    			</div>
-    			<div class="header-bottom">
+                    <img src="images/sideheader.jpg">
     				<a href="index.html">Canastahudik</a>
+                    <img src="images/sideheader.jpg">
     			</div>
                 <div class="menubar">
                     <div class="menubar-inner">
-                        <a href="referenser.html">Regler</a>
-                        <a href="contact.html">Ställning</a>
-                        <a href="https://groggbloggen.se/" target="_blank">Groggrecept</a>
-                        <a href="https://www.1177.se/" target="_blank">1177</a>
+                        <a href="rules.html">Regler</a>
+                        <a href="standing.html">Ställning</a>
                     </div>
                 </div>  			
     		</div>
@@ -35,7 +29,7 @@
     				<h1>Välkommen till Canastahudik!</h1>
                     <hr>
                     <h3>Varför inte förgylla en vardag med lite Canasta?</h3>
-                    <img src="images/crossed-hammers.png">
+                    <img src="images/canasta_front.png">
     			</div>
     		</div>
     	</div>
