--- a/rules.html
+++ b/rules.html
@@ -38,10 +38,11 @@
                     Om näst sista kortet vid avslut gör en canasta, dubblas poängen för den.<br/><br/>
 
                     <strong>Öppning:</strong><br/>
-                    Från 0 till 1 500 öppna med 50<br/>
-                    Från 1500 till 3 000 öppna med 90<br/>
-                    Från 3000 till 5 000 öppna med 120<br/>
-                    Från 5000 till 10 000 öppna med canasta på hand<br/><br/>
+                    0 till 1 500 öppna med 60<br/>
+                    1501 till 3 000 öppna med 90<br/>
+                    3001 till 5 000 öppna med 120<br/>
+                    5001 till 7500 öppna med 150.<br/>
+                    7501 till 10 000 öppna med canasta på hand<br/><br/>
 
                     <strong>Hur man räknar poäng:</strong><br/>
                     Fyror till nior: 5 poäng<br/>
@@ -49,8 +50,8 @@
                     Ess och små jokrar: 20 poäng<br/>
                     Stor joker: 50 poäng<br/>
                     Röd 3:a: 100 poäng<br/>
-                    Canasta, 7 rena kort 500 poäng<br/>
-                    Canasta, 5 kort och 2 jokrar 300 poäng<br/>
+                    Röd canasta, 7 rena kort: 700 poäng<br/>
+                    Svart canasta, 4-6 kort och resten jokrar: 400 poäng<br/>
                     Svart 3:a på hand, böter minus 100 poäng<br/><br/>
                     <strong>Först till 10 000 har vunnit eller om båda lagen passerar 10 000 det lag som kommer högst.</strong>
                 </p>
