--- a/rules.html
+++ b/rules.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
     <head>
-        <title>L-N-A-B</title>
+        <title>Canastahudik</title>
         <meta charset="utf-8">
         <link href="css/main.css" rel="stylesheet" type="text/css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
                     Utlagda kortserier får aldrig bestå av övervägande eller lika del jokrar.<br/>
                     Svart 3:a låser högen för nästa spelare.<br/>
                     Medspelaren får i sin tur bygga på de utlagda korten så man får minst 2 olika canastor. En svart och en röd.<br/>
-                    Vill någon ta de 10 översta korten i högen måste man själv ha 2 lika kort på hand. Därefter ska det gå en runda innan man får utnyttja resterande nio kort.<br/>
+                    Vill någon ta de 10 översta korten i högen måste man själv ha 2 lika kort på hand som det kort som ligger överst. Därefter ska det gå en runda innan man får utnyttja resterande nio kort.<br/>
                     För att avsluta ska man ha minst 2 olika canastor utlagda på bordet samt ha slut på kort på hand när det sista sakas i högen.<br/>
                     Om näst sista kortet vid avslut gör en canasta, dubblas poängen för den.<br/><br/>
 
