--- a/standing.html
+++ b/standing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
     <head>
-        <title>L-N-A-B</title>
+        <title>Canastahudik</title>
         <meta charset="utf-8">
         <link href="css/main.css" rel="stylesheet" type="text/css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
