--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quantico:wght@700&family=Spectral:wght@400;600&display=swap" rel="stylesheet">
     </head>
-    <body class="startpage">
+    <body class="rules">
     	<div class="page">
     		<div class="header">
                 <div class="header-top">
@@ -25,36 +25,38 @@
             </div>
 
     		<div class="content">
-                <p><strong>Regler</strong><br/>
-                    Tre kortlekar plus sex stora jokrar, alla tvåor är joker.<br/>
-                    Varje spelare får femton kort.<br/>
-                    Man plockar 2 kort plus 1 kort för varje röd 3:a i tur och ordning.<br/>
-                    Öppningen ska läggas i minst en triss och enligt reglerna under avsnittet Öppning.<br/>
-                    Utlagda kortserier får aldrig bestå av övervägande eller lika del jokrar.<br/>
-                    Svart 3:a låser högen för nästa spelare.<br/>
-                    Medspelaren får i sin tur bygga på de utlagda korten så man får minst 2 olika canastor. En svart och en röd.<br/>
-                    Vill någon ta de 10 översta korten i högen måste man själv ha 2 lika kort på hand som det kort som ligger överst. Därefter ska det gå en runda innan man får utnyttja resterande nio kort.<br/>
-                    För att avsluta ska man ha minst 2 olika canastor utlagda på bordet samt ha slut på kort på hand när det sista sakas i högen.<br/>
-                    Om näst sista kortet vid avslut gör en canasta, dubblas poängen för den.<br/><br/>
+                <div class="rules-holder">
+                    <p><strong>Regler</strong><br/>
+                        Tre kortlekar plus sex stora jokrar, alla tvåor är joker.<br/>
+                        Varje spelare får femton kort.<br/>
+                        Man plockar 2 kort plus 1 kort för varje röd 3:a i tur och ordning.<br/>
+                        Öppningen ska läggas i minst en triss och enligt reglerna under avsnittet Öppning.<br/>
+                        Utlagda kortserier får aldrig bestå av övervägande eller lika del jokrar.<br/>
+                        Svart 3:a låser högen för nästa spelare.<br/>
+                        Medspelaren får i sin tur bygga på de utlagda korten så man får minst 2 olika canastor. En svart och en röd.<br/>
+                        Vill någon ta de 10 översta korten i högen måste man själv ha 2 lika kort på hand som det kort som ligger överst. Därefter ska det gå en runda innan man får utnyttja resterande nio kort.<br/>
+                        För att avsluta ska man ha minst 2 olika canastor utlagda på bordet samt ha slut på kort på hand när det sista sakas i högen.<br/>
+                        Om näst sista kortet vid avslut gör en canasta, dubblas poängen för den.<br/><br/>
 
-                    <strong>Öppning:</strong><br/>
-                    0 till 1 500 öppna med 60<br/>
-                    1501 till 3 000 öppna med 90<br/>
-                    3001 till 5 000 öppna med 120<br/>
-                    5001 till 7500 öppna med 150.<br/>
-                    7501 till 10 000 öppna med canasta på hand<br/><br/>
+                        <strong>Öppning:</strong><br/>
+                        0 till 1 500 öppna med 60<br/>
+                        1501 till 3 000 öppna med 90<br/>
+                        3001 till 5 000 öppna med 120<br/>
+                        5001 till 7500 öppna med 150.<br/>
+                        7501 till 10 000 öppna med canasta på hand<br/><br/>
 
-                    <strong>Hur man räknar poäng:</strong><br/>
-                    Fyror till nior: 5 poäng<br/>
-                    Tior och klädda kort: 10 poäng<br/>
-                    Ess och små jokrar: 20 poäng<br/>
-                    Stor joker: 50 poäng<br/>
-                    Röd 3:a: 100 poäng<br/>
-                    Röd canasta, 7 rena kort: 700 poäng<br/>
-                    Svart canasta, 4-6 kort och resten jokrar: 400 poäng<br/>
-                    Svart 3:a på hand, böter minus 100 poäng<br/><br/>
-                    <strong>Först till 10 000 har vunnit eller om båda lagen passerar 10 000 det lag som kommer högst.</strong>
-                </p>
+                        <strong>Hur man räknar poäng:</strong><br/>
+                        Fyror till nior: 5 poäng<br/>
+                        Tior och klädda kort: 10 poäng<br/>
+                        Ess och små jokrar: 20 poäng<br/>
+                        Stor joker: 50 poäng<br/>
+                        Röd 3:a: 100 poäng<br/>
+                        Röd canasta, 7 rena kort: 700 poäng<br/>
+                        Svart canasta, 4-6 kort och resten jokrar: 400 poäng<br/>
+                        Svart 3:a på hand, böter minus 100 poäng<br/><br/>
+                        <strong>Först till 10 000 har vunnit eller om båda lagen passerar 10 000 det lag som kommer högst.</strong>
+                    </p>
+                </div>
     		</div>
     	</div>
     </body>
