--- a/standing.html
+++ b/standing.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quantico:wght@700&family=Spectral:wght@400;600&display=swap" rel="stylesheet">
     </head>
-    <body class="startpage">
+    <body class="standing">
     	<div class="page">
     		<div class="header">
                 <div class="header-top">
