--- a/standing.html
+++ b/standing.html
@@ -25,6 +25,38 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">2022-02-16</h2>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Pär Sjöbom</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Mikael Eliasson</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>0</p>
+                        </div>                       
+                    </div>
+                </div>
+
                 <h2 class="standing-header">2022-02-10</h2>
                 <div class="standing-holder">
                     <div class="standing">
@@ -56,7 +88,7 @@
                             <p>0</p>
                         </div>                       
                     </div>
-                </div>  
+                </div>
     		</div>
     	</div>
     </body>
