--- a/standing.html
+++ b/standing.html
@@ -29,6 +29,20 @@
                 <div class="standing-holder">
                     <div class="standing">
                         <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
                             <p>Niklas Arvidsson</p>
                         </div>
                         <div class="standing-inner">
@@ -61,6 +75,20 @@
                 <div class="standing-holder">
                     <div class="standing">
                         <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>3.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
                             <p>Niklas Arvidsson</p>
                         </div>
                         <div class="standing-inner">
@@ -91,6 +119,20 @@
 
                 <h2 class="standing-header">2022-02-10</h2>
                 <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
                     <div class="standing">
                         <div class="standing-inner">
                             <p>Fredrik Lassfolk</p>
