--- a/rules.html
+++ b/rules.html
@@ -53,8 +53,8 @@
                         Röd 3:a: 100 poäng<br/>
                         Röd canasta, 7 rena kort: 700 poäng<br/>
                         Svart canasta, 4-6 kort och resten jokrar: 400 poäng<br/>
-                        Svart 3:a på hand, böter minus 100 poäng<br/><br/>
-                        <strong>Först till 10 000 har vunnit eller om båda lagen passerar 10 000 det lag som kommer högst.</strong>
+                        Svart 3:a på hand efter utgång, böter minus 100 poäng<br/><br/>
+                        <strong>Först till 10 000 har vunnit eller om båda lagen passerar 10 000, det lag som kommer högst.</strong>
                     </p>
                 </div>
     		</div>
