--- a/rules.html
+++ b/rules.html
@@ -39,7 +39,7 @@
                         Om näst sista kortet vid avslut gör en canasta, dubblas poängen för den.<br/><br/>
 
                         <strong>Öppning:</strong><br/>
-                        0 till 1 500 öppna med 60<br/>
+                        0 till 1 500 öppna med 60, utan jokrar<br/>
                         1501 till 3 000 öppna med 90<br/>
                         3001 till 5 000 öppna med 120<br/>
                         5001 till 7500 öppna med 150.<br/>
