--- a/rules.html
+++ b/rules.html
@@ -42,7 +42,7 @@
                         0 till 1 500 öppna med 60, utan jokrar<br/>
                         1501 till 3 000 öppna med 90<br/>
                         3001 till 5 000 öppna med 120<br/>
-                        5001 till 7500 öppna med 150.<br/>
+                        5001 till 7500 öppna med 150<br/>
                         7501 till 10 000 öppna med canasta på hand<br/><br/>
 
                         <strong>Hur man räknar poäng:</strong><br/>
