--- a/standing.html
+++ b/standing.html
@@ -26,7 +26,7 @@
 
     		<div class="content">
                 <h2 class="standing-header">Omgång 2 (22-07-10)</h2>
-                <h3>Först till fem</h3>
+                <h3 class="standing-header">Först till fem</h3>
                 <div class="standing-holder">
                     <div class="standing">
                         <div class="standing-inner">
