--- a/standing.html
+++ b/standing.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="standing">
                         <div class="standing-inner">
-                            <p>Niklas Arvidsson</p>
+                            <p><strong>Niklas Arvidsson</strong></p>
                         </div>
                         <div class="standing-inner">
                             <p>Mikael Eliasson</p>
