--- a/standing.html
+++ b/standing.html
@@ -25,8 +25,37 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">Omgång 2 (22-08-02)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Mikael Eliasson & Pär Sjöbom</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Niklas Arvidsson</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>                
+                    </div>
+                </div>
+
                 <h2 class="standing-header">Omgång 2 (22-07-22)</h2>
-                <h3 class="standing-header">Först till fem</h3>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
                         <div class="standing-inner">
@@ -55,7 +84,7 @@
                 </div>
 
                 <h2 class="standing-header">Omgång 2 (22-07-13)</h2>
-                <h3 class="standing-header">Först till fem</h3>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
                         <div class="standing-inner">
@@ -84,7 +113,7 @@
                 </div>
 
                 <h2 class="standing-header">Omgång 2 (22-07-10)</h2>
-                <h3 class="standing-header">Först till fem</h3>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
                         <div class="standing-inner">
