--- a/standing.html
+++ b/standing.html
@@ -46,6 +46,35 @@
                     </div>
                     <div class="standing">
                         <div class="standing-inner">
+                            <p>5</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>5</p>
+                        </div>                
+                    </div>
+                </div>
+
+                <h2 class="standing-header">Omgång 2 (22-08-02)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Mikael Eliasson & Pär Sjöbom</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Niklas Arvidsson</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
                             <p>4</p>
                         </div>
                         <div class="standing-inner">
