--- a/standing.html
+++ b/standing.html
@@ -25,6 +25,35 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">Slutställning omgång 2 (22-09-14)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Niklas Arvidsson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Mikael Eliasson & Pär Sjöbom</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>8</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>6</p>
+                        </div>                
+                    </div>
+                </div>
+
                 <h2 class="standing-header">Omgång 2 (22-08-30)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
