--- a/standing.html
+++ b/standing.html
@@ -25,6 +25,37 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">Omgång 3 (22-09-19)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Mikael Eliasson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Pär Sjöbom</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>2</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>0</p>
+                        </div>                
+                    </div>
+                </div>
+
+                <hr>
+
                 <h2 class="standing-header">Slutställning omgång 2 (22-09-14)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
@@ -38,7 +69,7 @@
                     </div>
                     <div class="standing">
                         <div class="standing-inner">
-                            <p>Fredrik Lassfolk & Niklas Arvidsson</p>
+                            <p><strong>Fredrik Lassfolk & Niklas Arvidsson</strong></p>
                         </div>
                         <div class="standing-inner">
                             <p>Mikael Eliasson & Pär Sjöbom</p>
