--- a/standing.html
+++ b/standing.html
@@ -25,6 +25,35 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">Omgång 3 (22-10-01)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Mikael Eliasson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Pär Sjöbom</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>0</p>
+                        </div>                
+                    </div>
+                </div>
+
                 <h2 class="standing-header">Omgång 3 (22-09-19)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
