--- a/rules.html
+++ b/rules.html
@@ -50,7 +50,7 @@
                         Tior och klädda kort: 10 poäng<br/>
                         Ess och små jokrar: 20 poäng<br/>
                         Stor joker: 50 poäng<br/>
-                        Röd 3:a: 100 poäng<br/>
+                        Röd 3:a: 100 poäng om Canasta finns, annars -100 poäng<br/>
                         Röd canasta, 7 rena kort: 700 poäng<br/>
                         Svart canasta, 4-6 kort och resten jokrar: 400 poäng<br/>
                         Svart 3:a på hand efter utgång, böter minus 100 poäng<br/><br/>
